# avendish-ml-processor-template

./: CMakeLists.txt  README.md  dependencies.cmake
.github/workflows/: build_cmake.yml  builds.yaml  portability.yml
cmake/: onnxruntime.cmake
model/: scale_by_two.onnx
src/: Model.cpp  Model.hpp
